--- a/upload.html
+++ b/upload.html
@@ -103,7 +103,8 @@
 		$('select').formSelect();
 		$('.carousel').carousel({
 			noWrap: true,
-			padding: 50
+			padding: 50,
+			indicators: true,
 		});
 		$('.modal').modal()
 
