Fixed euclidean value.

--- a/index.html
+++ b/index.html
@@ -219,6 +219,9 @@
 	</div>
 </body>
 
+<script type="text/javascript">
+	var pixelsPerMetric = 5.17891350813243
+</script>
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <script type="text/javascript" src="js/materialize.min.js"></script>
 <script type="text/javascript" src="js/measurementForm.js"></script>
