Sleeve transfered to side.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
 						<li><label><input type="radio" value="hips-f" name="front-target"> <span class="label-text">Hips</span></label></li>
 						<li><label><input type="radio" value="inseam-f" name="front-target"> <span class="label-text">Inseam</span></label></li>
 						<li><label><input type="radio" value="neck-f" name="front-target"> <span class="label-text">Neck</span></label></li>
-						<li><label><input type="radio" value="sleeve-f" name="front-target"> <span class="label-text">Sleeve</span></label></li>
 						<li><label><input type="radio" value="height-f" name="front-target"> <span class="label-text">Height</span></label></li>
 					</ul>
 					<ul class="right">
@@ -75,6 +74,7 @@
 				<div class="toolbar">
 					<ul class="left">
 						<li><label><input type="radio" value="chest-s" name="side-target" checked> <span class="label-text">Chest</span></label></li>
+						<li><label><input type="radio" value="sleeve-s" name="side-target"> <span class="label-text">Sleeve</span></label></li>
 						<li><label><input type="radio" value="waist-s" name="side-target"> <span class="label-text">Waist</span></label></li>
 						<li><label><input type="radio" value="hips-s" name="side-target"> <span class="label-text">Hips</span></label></li>
 						<li><label><input type="radio" value="neck-s" name="side-target"> <span class="label-text">Neck</span></label></li>
@@ -161,10 +161,6 @@
 					        	<input placeholder="inch" id="neck-f" name="neck-f" type="text" class="validate">
 					        	<label class="active text-uppercase" for="neck">Neck</label>
 					        </div>
-					        <div class="input-field col s4 m2 l2">
-					        	<input placeholder="inch" id="sleeve-f" name="sleeve-f" type="text" class="validate">
-					        	<label class="active text-uppercase" for="sleeve">Sleeve</label>
-					        </div>
 							<div class="input-field col s4 m2 l2">
 					        	<input placeholder="inch" id="height-f" name="height-f" type="text" class="validate">
 					        	<label class="active text-uppercase" for="height">Height</label>
@@ -172,6 +168,10 @@
 
 					        <div class="col s12">
 						        <h5>Side</h5>
+					        </div>
+					        <div class="input-field col s4 m2 l2">
+					        	<input placeholder="inch" id="sleeve-s" name="sleeve-s" type="text" class="validate">
+					        	<label class="active text-uppercase" for="sleeve">Sleeve</label>
 					        </div>
 							<div class="input-field col s4 m2 l2">
 					        	<input placeholder="inch" id="chest-s" name="chest-s" type="text" class="validate">
