--- a/table.html
+++ b/table.html
@@ -1,107 +1,235 @@
 <!DOCTYPE html>
 <html>
 <head>
+	{% load staticfiles %}
 	<title>Table</title>
-	<link rel="stylesheet" type="text/css" href="css/materialize.min.css">
+	<link rel="stylesheet" type="text/css" href="{% static 'opencv_test/css/materialize.min.css' %}">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/table.css">
+	<link rel="stylesheet" type="text/css" href="{% static 'opencv_test/css/table.css' %}">
 	<style type="text/css">
-		.name{
+		.F{
+			background-color: rgb(216,27,96);
+			color: white; 
+		}
+
+		.M{
+			background-color: rgb(94,53,177);
+			color: white; 
+		}
+
+		.brand .name{
 			display: flex;
-			align-content: center;
+			align-items: center;
 			justify-content: center;
+		}
+
+		.brand .name .chip{
+			transform: translate(0,0.25em);
+		}
+
+		.cluster-links{
+			display: flex;
+			widows: 100%;
+		}
+
+		td, th{
+			width: 50%;
 		}
 	</style>
 </head>
 <body>
 	<div class="navbar-fixed">
 		<nav class="blue-grey">
+			<ul>
+				<li><a href="#" data-target="measurements" class="sidenav-trigger show-on-medium-and-up"><i class="material-icons">menu</i></a></li>
+			</ul>
 			<ul class="right">
 				<li><a href="index.html">Measurement</a></li>
 				<li><a href="upload.html">Change Images</a></li>
 			</ul>
 		</nav>
 	</div>
+
+	<ul id="measurements" class="sidenav">
+		<form id="measurement-form">
+			<div class="row">
+				<div class="col s12">
+					<h5>Your Measurements</h5>
+				</div>
+				<div class="col s12">
+			        <h6>Front</h6>
+		        </div>
+		        <div class="input-field col s12">
+		        	<input placeholder="inch" id="shoulder-f" name="shoulder-f" type="text" class="validate" value="{{valuehere}}">
+		        	<label class="active text-uppercase" for="shoulder">Shoulder</label>
+		        </div>
+				<div class="input-field col s12">
+		        	<input placeholder="inch" id="chest-f" name="chest-f" type="text" class="validate" value="{{valuehere}}">
+		        	<label class="active text-uppercase" for="chest">Chest</label>
+		        </div>
+		        <div class="input-field col s12">
+		        	<input placeholder="inch" id="waist-f" name="waist-f" type="text" class="validate" value="{{valuehere}}">
+		        	<label class="active text-uppercase" for="waist">Waist</label>
+		        </div>
+		        <div class="input-field col s12">
+		        	<input placeholder="inch" id="hips-f" name="hips-f" type="text" class="validate" value="{{valuehere}}">
+		        	<label class="active text-uppercase" for="hips">Hips</label>
+		        </div>
+				<div class="input-field col s12">
+		        	<input placeholder="inch" id="inseam-f" name="inseam-f" type="text" class="validate" value="{{valuehere}}">
+		        	<label class="active text-uppercase" for="inseam">Inseam</label>
+		        </div>
+		        <div class="input-field col s12">
+		        	<input placeholder="inch" id="neck-f" name="neck-f" type="text" class="validate" value="{{valuehere}}">
+		        	<label class="active text-uppercase" for="neck">Neck</label>
+		        </div>
+		        <div class="input-field col s12">
+		        	<input placeholder="inch" id="sleeve-f" name="sleeve-f" type="text" class="validate" value="{{valuehere}}">
+		        	<label class="active text-uppercase" for="sleeve">Sleeve</label>
+		        </div>
+				<div class="input-field col s12">
+		        	<input placeholder="inch" id="height-f" name="height-f" type="text" class="validate" value="{{valuehere}}">
+		        	<label class="active text-uppercase" for="height">Height</label>
+		        </div>
+
+		        <div class="col s12">
+			        <h6>Side</h6>
+		        </div>
+				<div class="input-field col s12">
+		        	<input placeholder="inch" id="chest-s" name="chest-s" type="text" class="validate" value="{{valuehere}}">
+		        	<label class="active text-uppercase" for="chest">Chest</label>
+		        </div>
+		        <div class="input-field col s12">
+		        	<input placeholder="inch" id="waist-s" name="waist-s" type="text" class="validate" value="{{valuehere}}">
+		        	<label class="active text-uppercase" for="waist">Waist</label>
+		        </div>
+		        <div class="input-field col s12">
+		        	<input placeholder="inch" id="hips-s" name="hips-s" type="text" class="validate" value="{{valuehere}}">
+		        	<label class="active text-uppercase" for="hips">Hips</label>
+		        </div>
+		        <div class="input-field col s12">
+		        	<input placeholder="inch" id="neck-s" name="neck-s" type="text" class="validate" value="{{valuehere}}">
+		        	<label class="active text-uppercase" for="neck">Neck</label>
+		        </div>
+				<div class="col s12 m12">
+					<button class="btn btn-block waves-effect waves-light" type="submit">
+						<i class="material-icons left">refresh</i>
+						Change
+					</button>
+				</div>
+			</div>
+		</form>
+	</ul>
+
 	<div class="container">
-		<div class="display-container">
-			<!-- {% for key, value in brands.items %} -->
-			<div class="brand">
-				<h4 class="name"><div class="chip {{ size.sex }}">M</div> Abercrombie and Fitcher</h4>
-				<!-- <h4 class="name">{{ key }}</h4> -->
-				<!-- {% for size in value %}  -->
-				<div>
-					<h5 class="cluster"><span class="size">XS</span> Skinny jeans</h5>
-					<!-- <h5 class="cluster"><span class="size">{{ size.size }}</span> {{ size.cluster }}</h5> -->
-					<div class="row">
-						<div class="col s12">
-							<table>
-								<!-- {% if size.neck > 0 %} -->
-								<tr>
-									<th>Neck</th>
-									<td>34</td>
-									<!-- <td>{{ size.neck }}</td> -->
-								</tr>
-								<!-- {% endif %} -->
+		<div class="row">
+			<div class="col s12 m6 offset-m3 l8 offset-l2">
+				{% for apparel_key, apparel_value in apparels.items %}
+				<!-- {{ forloop.counter }} WHENEVER GA ITERATE ANG FORLOP GA DUGANG ANG FORLOOP.COUNTER BY 1. GA START SA 1. CAN BE USED AS ID--> 
+				<div class="display-container">
+					<div class="brand">
+						<h4 class="name"><div class="chip {{ dept }} M">{{ dept }}</div> {{ apparel_key }}</h4>
+						<ul class="cluster-links">
+						{% for cluster_key, cluster_value in apparel_value.items %}
+							<li><a class="chip" href="#{{ apparel_key }}{{ cluster_key }}">{{ cluster_key }}</a></li>
+						{% endfor %}
+						</ul>
+						{% for cluster_key, cluster_value in apparel_value.items %}
+							<div id="{{ apparel_key }}{{ cluster_key }}">
+							<h5>{{ cluster_key }}</h5>
+							{% for an_key, an_value in cluster_value.items %}
+								<h5><small>{{ an_key }}</small></h5>
+								{% for size in an_value %}
+								<h6 class="cluster"><span class="size">{{ size.size }}</span> {{ size.classification }}</h6>
+								<div class="row">
+									<div class="col s12">
+										<table>
+											{% if size.neck_gt0 %}
+											<tr>
+												<th>Neck</th>
+												<td>{{ size.neck }}</td>
+											</tr>
+											{% endif %}
 
-								<!-- {% if size.chest > 0 %} -->
-								<tr>
-									<th>Chest</th>
-									<td>34</td>
-									<!-- <td>{{ size.chest }}</td> -->
-								</tr>
-								<!-- {% endif %} -->
+											{% if size.chest_gt0 %}
+											<tr>
+												<th>Chest</th>
+												<td>{{ size.chest }}</td>
+											</tr>
+											{% endif %}
 
-								<!-- {% if size.waist > 0 %} -->
-								<tr>
-									<th>Waist</th>
-									<td>34</td>
-									<!-- <td>{{ size.waist }}</td> -->
-								</tr>
-								<!-- {% endif %} -->
+											{% if size.waist_gt0 %}
+											<tr>
+												<th>Waist</th>
+												<td>{{ size.waist }}</td>
+											</tr>
+											{% endif %}
 
-								<!-- {% if size.hips > 0 %} -->
-								<tr>
-									<th>Hips</th>
-									<td>34</td>
-									<!-- <td>{{ size.hips }}</td> -->
-								</tr>
-								<!-- {% endif %} -->
+											{% if size.hips_gt0 %}
+											<tr>
+												<th>Hips</th>
+												<td>{{ size.hips }}</td>
+											</tr>
+											{% endif %}
 
-								<!-- {% if size.inseam > 0 %} -->
-								<tr>
-									<th>Inseam</th>
-									<td>34</td>
-									<!-- <td>{{ size.inseam }}</td> -->
-								</tr>
-								<!-- {% endif %} -->
+											{% if size.inseam_gt0 %}
+											<tr>
+												<th>Inseam</th>
+												<td>{{ size.inseam }}</td>
+											</tr>
+											{% endif %}
 
-								<!-- {% if size.shoulder_width > 0 %} -->
-								<tr>
-									<th>Shoulder Width</th>
-									<td>34</td>
-									<!-- <td>{{ size.shoulder_width }}</td> -->
-								</tr>
-								<!-- {% endif %} -->
+											{% if size.shoulder_gt0 %}
+											<tr>
+												<th>Shoulder Width</th>
+												<td>{{ size.shoulder_width }}</td>
+											</tr>
+											{% endif %}
 
-								<!-- {% if size.sleeve_length > 0 %} -->
-								<tr>
-									<th>Sleave Length</th>
-									<td>34</td>
-									<!-- <td>{{ size.sleeve_length }}</td> -->
-								</tr>
-								<!-- {% endif %} -->
+											{% if size.sleeve_gt0 %}
+											<tr>
+												<th>Sleave Length</th>
+												<td>{{ size.sleeve_length }}</td>
+											</tr>
+											{% endif %}
 
-							</table>
-						</div>
+										</table>
+									</div>
+								</div>
+								{% endfor %}
+							{% endfor %}
+							</div>
+						{% endfor %}
+
 					</div>
 				</div>
-				<!-- {% endfor %} -->
+				{% endfor %}
 			</div>
-			<!-- {% endfor %} -->
 		</div>
 	</div>
 </body>
-<script type="text/javascript" src="js/jquery.min.js"></script>
-<script type="text/javascript" src="js/materialize.min.js"></script>
-<script type="text/javascript" src="js/angular.min.js"></script>
+<script type="text/javascript" src="{% static 'opencv_test/js/jquery.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'opencv_test/js/materialize.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'opencv_test/js/angular.min.js' %}"></script>
+<script>
+	$(document).ready(function(){
+	    $('.sidenav').sidenav();
+	});
+	$(document).on("click", "a.chip", function(){
+		$("html, body").animate({
+			scrollTop: $($.attr(this, "href")).offset().top - 80
+		}, 500)
+	})
+</script>
 </html>
+
+
+
+
+<!-- for apparel_key, apparel_value in apparels.items():
+			print(apparel_key)
+			for cluster_key, cluster_value in apparel_value.items():
+				print("\t",cluster_key)
+				for an_key, an_value in cluster_value.items():
+					print("\t\t",an_key)
+					print("\t\t\t",an_value) -->
